--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
               ## Zoom-in: Learning to coordinate
               ----
               How to let autonomous agents independently learn to exploit communication for coordinating?
+
+              Feat. Franco Zambonelli :)
             </script>
           </section>
           <section data-markdown data-auto-animate>
@@ -252,6 +254,8 @@
               ## Zoom-in: Causal discovery
               ----
               How to let autonomous agents co-discover world models?
+
+              Feat. Franco Zambonelli :)
             </script>
           </section>
           <section data-markdown data-auto-animate>
@@ -493,14 +497,14 @@
             <script type="text/template">
               ## Others
               ----
-              * Integration of Agents and Digital Twins
+              * Integration of Agents and Digital Twins (feat. Picone)
             </script>
           </section>
           <section data-markdown data-auto-animate>
             <script type="text/template">
               ## Others
               ----
-              * Integration of Agents and Digital Twins
+              * Integration of Agents and Digital Twins (feat. Picone)
               * Distributed argumentation as a means to coordinate
             </script>
           </section>
@@ -508,7 +512,7 @@
             <script type="text/template">
               ## Others
               ----
-              * Integration of Agents and Digital Twins
+              * Integration of Agents and Digital Twins (feat. Picone)
               * Distributed argumentation as a means to coordinate
               * Blockchains as a distributed computing engine
             </script>
@@ -517,7 +521,17 @@
             <script type="text/template">
               ## Others
               ----
-              * Integration of Agents and Digital Twins
+              * Integration of Agents and Digital Twins (feat. Picone)
+              * Distributed argumentation as a means to coordinate
+              * Blockchains as a distributed computing engine
+              * Decision support systems in healthcare
+            </script>
+          </section>
+          <section data-markdown data-auto-animate>
+            <script type="text/template">
+              ## Others
+              ----
+              * Integration of Agents and Digital Twins (feat. Picone)
               * Distributed argumentation as a means to coordinate
               * Blockchains as a distributed computing engine
               * Decision support systems in healthcare
