--- a/index.html
+++ b/index.html
@@ -497,7 +497,77 @@
             <script type="text/template">
               ## Others
               ----
-              * Integration of Agents and Digital Twins (feat. Picone)
+              <style>
+                .container{
+                  display: flex;
+                }
+                .col{
+                  flex: 1;
+                }
+              </style>
+              <div class="container">
+                <div class="col">
+                  <img data-src="res/dt-agent-contexts.png">
+                  <img data-src="res/agent-dt-per-func-tasks.png">
+                </div>
+                <div class="col">
+                  <ul>
+                    <li> Integration of Agents and Digital Twins (feat. Picone) </li>
+                  </ul>
+                </div>
+              </div>
+            </script>
+          </section>
+          <section data-markdown data-auto-animate>
+            <script type="text/template">
+              ## Others
+              ----
+              <style>
+                .container{
+                  display: flex;
+                }
+                .col{
+                  flex: 1;
+                }
+              </style>
+              <div class="container">
+                <div class="col">
+                  <img data-src="res/535322_1_En_3_Fig1_HTML.png">
+                </div>
+                <div class="col">
+                  <ul>
+                    <li> Integration of Agents and Digital Twins (feat. Picone) </li>
+                    <li> Distributed argumentation as a means to coordinate </li>
+                  </ul>
+                </div>
+              </div>
+            </script>
+          </section>
+          <section data-markdown data-auto-animate>
+            <script type="text/template">
+              ## Others
+              ----
+              <style>
+                .container{
+                  display: flex;
+                }
+                .col{
+                  flex: 1;
+                }
+              </style>
+              <div class="container">
+                <div class="col">
+                  <img data-src="res/cognitive-service.png">
+                  <img data-src="res/ml-pipeline.png">
+                </div>
+                <div class="col">
+                  <ul>
+                    <li> Integration of Agents and Digital Twins (feat. Picone) </li>
+                    <li> Distributed argumentation as a means to coordinate </li>
+                    <li> Decision support systems in healthcare </li>
+                  </ul>
+                </div>
+              </div>
             </script>
           </section>
           <section data-markdown data-auto-animate>
@@ -506,25 +576,8 @@
               ----
               * Integration of Agents and Digital Twins (feat. Picone)
               * Distributed argumentation as a means to coordinate
-            </script>
-          </section>
-          <section data-markdown data-auto-animate>
-            <script type="text/template">
-              ## Others
-              ----
-              * Integration of Agents and Digital Twins (feat. Picone)
-              * Distributed argumentation as a means to coordinate
-              * Blockchains as a distributed computing engine
-            </script>
-          </section>
-          <section data-markdown data-auto-animate>
-            <script type="text/template">
-              ## Others
-              ----
-              * Integration of Agents and Digital Twins (feat. Picone)
-              * Distributed argumentation as a means to coordinate
-              * Blockchains as a distributed computing engine
               * Decision support systems in healthcare
+              * Blockchains as a distributed computing engine
             </script>
           </section>
           <section data-markdown data-auto-animate>
