--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               ----
               How to let autonomous agents independently learn to exploit communication for coordinating?
 
-              Feat. Franco Zambonelli :)
+              <p> <small>(feat. Franco Zambonelli)</small> </p>
             </script>
           </section>
           <section data-markdown data-auto-animate>
@@ -255,7 +255,7 @@
               ----
               How to let autonomous agents co-discover world models?
 
-              Feat. Franco Zambonelli :)
+              <p> <small>(feat. Franco Zambonelli)</small> </p>
             </script>
           </section>
           <section data-markdown data-auto-animate>
